--- a/social-network/static/css/image.css
+++ b/social-network/static/css/image.css
@@ -14,3 +14,17 @@
     border-radius: 50%;
     object-fit: cover;
 }
+
+.profileImageIconSmall {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.imageForPost {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+}
