Search users (FE)

--- a/social-network/static/css/registration.css
+++ b/social-network/static/css/registration.css
@@ -12,7 +12,7 @@
 .reg-form form{
     padding: 10%;
 }
-.lregistration-btnSubmit
+.registration-btnSubmit
 {
     width: 50%;
     border-radius: 1rem;
